correction mobile css

--- a/css/style.css
+++ b/css/style.css
@@ -439,7 +439,7 @@ input {
   color: #fe142f;
   padding: 0;
   font-size: 1rem;
-  margin: 60px 0 0;
+  margin: 60px 0 10px;
   font-weight: bolder;
 }
 .hero-section > .btn-signup {
@@ -462,10 +462,6 @@ footer {
 
 /* responsive */
 @media screen and (max-width: 821px) {
-  .bground {
-    top: 50px;
-  }
-
   .hero-section {
     display: block;
     box-shadow: unset;
@@ -585,7 +581,6 @@ footer {
     justify-content: space-between;
     align-items: center;
     margin-top: 15px;
-    z-index: 10;
   }
 }
 
